[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickle_store_wrapper"
version = "0.0.1"
authors = [
  { name="Rakeki", email="none@none.com" },
]
description = "Pickle wrapper, allowing file storage of classes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Rakeki/pickle_store_wrapper"
Issues = "https://github.com/Rakeki/pickle_store_wrapper/issues"